# ReDisCA

./: .gitignore  README.md  pyproject.toml
examples/: README.md  analyze_mne_sample_evokeds.py  compare_mne_rsa_sample_evokeds.py  paper_like_benchmark.py  reproduce_erpcore_n170.py  synthetic_article.py  synthetic_benchmark.py  visualize_synthetic.py
examples/n170/: prepare_erpcore_n170.py  reproduce_erpcore_n170.py
src/redisca/: __init__.py  core.py  export.py  fit.py  mne_utils.py  rdm.py  report.py  stats.py  summary.py  types.py  validation.py  viz.py  viz_mne.py  windowed.py
tests/: conftest.py  test_examples_benchmark.py  test_helpers.py  test_redisca.py  test_windowed.py
